# rust-spiffe

./: .clippy.toml  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  Makefile  README.md  RELEASING.md  SECURITY.md  build.rs  ci.sh  clippy.toml  deny.toml  rustfmt.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/setup-env/: action.yaml
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  coverage.yml  publish.yml
.github/workflows/scripts/: agent-federated.conf  agent.conf  cleanup-spire.sh  filter-lcov.sh  run-spire.sh  server-federated.conf  server.conf
docs/: migration-spiffe-0.10.md
make/: fuzz.mk
scripts/: agent.conf  run-spire.sh
spiffe/: CHANGELOG.md  Cargo.toml  README.md  build.rs
spiffe-rustls/: CHANGELOG.md  Cargo.toml  README.md  build.rs
spiffe-rustls-grpc-examples/: Cargo.toml  README.md  build.rs
spiffe-rustls-tokio/: CHANGELOG.md  Cargo.toml  README.md
spiffe-rustls-tokio/examples/: mtls_tcp_client.rs  mtls_tcp_server.rs
spiffe-rustls-tokio/src/: acceptor.rs  connector.rs  error.rs  identity.rs  lib.rs
spiffe-rustls/examples/: grpc_client_mtls.rs  grpc_server_mtls.rs  mtls_tcp_client.rs  mtls_tcp_server.rs
spiffe-rustls/src/: authorizer.rs  client.rs  crypto.rs  error.rs  lib.rs  material.rs  observability.rs  policy.rs  prelude.rs  resolve.rs  server.rs  types.rs  verifier.rs
spiffe-rustls/tests/: federation_mtls.rs  integration_mtls.rs
spiffe-rustls/tests/fixtures/: ca.der  ca_uri_only.der  ca_with_spiffe_signing.der  leaf.key.pkcs8  mismatched.key.pkcs8  no_spiffe_leaf.der  spiffe_leaf.der  spiffe_leaf_no_digital_signature.der  spiffe_leaf_no_key_usage.der  spiffe_leaf_uri_only.der
spiffe/fuzz/: Cargo.toml  fuzz.dict
spiffe/fuzz/fuzz_targets/: fuzz_spiffe_id_parse.rs  fuzz_trust_domain_parse.rs
spiffe/src/: constants.rs  endpoint.rs  error.rs  lib.rs  observability.rs  prelude.rs
spiffe/src/bundle/: mod.rs
spiffe/src/bundle/jwt/: mod.rs
spiffe/src/bundle/x509/: mod.rs
spiffe/src/cert/: error.rs  errors.rs  mod.rs  parsing.rs
spiffe/src/grpc/: connector.rs  mod.rs
spiffe/src/jwt_source/: builder.rs  errors.rs  limits.rs  metrics.rs  mod.rs  source.rs  supervisor.rs  types.rs
spiffe/src/proto/: mod.rs  workload.proto  workload.rs
spiffe/src/spiffe_id/: mod.rs
spiffe/src/svid/: mod.rs
spiffe/src/svid/jwt/: mod.rs
spiffe/src/svid/x509/: mod.rs  validations.rs
spiffe/src/transport/: connector.rs  endpoint.rs  error.rs  mod.rs
spiffe/src/workload_api/: client.rs  endpoint.rs  error.rs  mod.rs  supervisor_common.rs  x509_context.rs  x509_source.rs
spiffe/src/workload_api/client/: header.rs  jwt.rs  mod.rs  x509.rs
spiffe/src/workload_api/pb/: mod.rs  workload.rs
spiffe/src/workload_api/x509_source/: builder.rs  errors.rs  limits.rs  metrics.rs  mod.rs  source.rs  supervisor.rs
spiffe/src/x509_source/: builder.rs  errors.rs  limits.rs  metrics.rs  mod.rs  source.rs  supervisor.rs  types.rs
spiffe/tests/: jwt_source.rs  workload_api_client.rs  workload_api_client_test.rs  x509_bundle.rs  x509_bundle_test.rs  x509_source.rs  x509_source_tests.rs  x509_svid.rs  x509_svid_test.rs
spiffe/tests/testdata/bundle/x509/: bundle.der
spiffe/tests/testdata/svid/x509/: 1-key.der  1-svid-chain.der  empty-subject-name-key.der  empty-subject-name.der  wrong-intermediate-no-key-cert-sign.der  wrong-leaf-no-digital-signature.der
spire-api/: CHANGELOG.md  Cargo.toml  README.md  build.rs
spire-api/src/: lib.rs  selectors.rs
spire-api/src/agent/: delegated_identity.rs  mod.rs
spire-api/src/pb/: mod.rs  spire.api.agent.delegatedidentity.v1.rs  spire.api.types.rs
spire-api/src/proto/: mod.rs  spire.api.agent.delegatedidentity.v1.rs  spire.api.types.rs
spire-api/tests/: delegated_identity_api_client_test.rs
src/: lib.rs
src/api/: delegated_identity.rs  mod.rs
src/bundle/: mod.rs
src/bundle/jwt/: mod.rs
src/bundle/x509/: mod.rs
src/cert/: errors.rs  mod.rs  parsing.rs
src/cert/validations/: mod.rs
src/proto/: _.rs  mod.rs  spire.api.agent.delegatedidentity.v1.rs  spire.api.types.rs  workload.proto  workload.rs  workload_grpc.rs
src/spiffe_id/: mod.rs  selector.rs
src/svid/: mod.rs
src/svid/jwt/: mod.rs
src/svid/x509/: mod.rs  validations.rs
src/workload_api/: address.rs  client.rs  mod.rs  x509_context.rs
tests/: delegated_api_client_test.rs  workload_api_client_test.rs  x509_bundle_test.rs  x509_svid_test.rs
tests/testdata/bundle/x509/: cert1.der  cert2.der
tests/testdata/delegate/: agent.conf
tests/testdata/svid/x509/: svid-with-dns-key.der  svid-with-dns.der  wrong-intermediate-no-ca.der  wrong-leaf-ca-true.der  wrong-leaf-cert-sign.der  wrong-leaf-crl-sign.der  wrong-leaf-empty-id.der
xtask/: Cargo.toml
xtask/src/: main.rs
