[package]
edition = "2018"
name = "spiffe"
# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Create a new tag
version = "0.3.0"
authors = ["Max Lambrecht <maxlambrecht@gmail.com>"]
description = "Rust client library implementation for SPIFFE"
license = "Apache-2.0"
repository = "https://github.com/maxlambrecht/rust-spiffe"
documentation = "https://docs.rs/spiffe"
readme = "README.md"
categories = ["cryptography"]
keywords = ["SPIFFE", "X509", "JWT"]

[dependencies]
bytes = { version = "1", features = ["serde"] }
tonic = { version = "0.9", default-features = false, features = ["prost", "codegen", "transport"]}
prost = { version = "0.11"}
prost-types = {version = "0.11"}
tokio = { "version" = "1", features = ["net", "test-util"]}
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }
thiserror = "1.0"
url = "2.2"
asn1 = { package = "simple_asn1", version = "0.6" }
x509-parser = "0.15"
pkcs8 = "0.10"
jsonwebtoken = "8.3"
jsonwebkey = { version = "0.3", features = ["jsonwebtoken", "jwt-convert"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
time = "0.3"


[dev-dependencies]
jsonwebkey = { version = "0.3", features = ["generate"] }
tokio-test = "0.4"
once_cell = "1.18"

# used to verify in tests that the certificates bytes from the X.509 SVIDs and bundle authorities
# are parseable as OpenSSL X.509 certificates.
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
tonic-build = { version = "0.9", default-features = false, features = ["prost"] }
prost-build = "0.11"
anyhow = "1.0.65"

[features]
integration-tests = []
