[workspace]
resolver = "2"
members = [
    "spiffe",
    "spire-api",
    "spiffe-rustls",
    "spiffe-rustls-tokio",
    "spiffe-rustls-grpc-examples",
    "xtask",
]
exclude = [
    "spiffe/fuzz",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/maxlambrecht/rust-spiffe"
authors = ["Max Lambrecht <maxlambrecht@gmail.com>"]

[workspace.lints.clippy]
all = "warn"
cargo = "warn"
pedantic = "warn"

must_use_candidate = { level = "allow", priority = 1 }

# absolute_paths = "warn" # Maybe someday.
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
# arbitrary_source_item_ordering = "warn" # Maybe someday.
# arithmetic_side_effects = "warn" # Maybe someday.
# as_conversions = "warn" # We should make this warn.
as_pointer_underscore = "warn"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
big_endian_bytes = "warn"
branches_sharing_code = "warn"
cfg_not_test = "warn"
clear_with_drain = "warn"
clone_on_ref_ptr = "warn"
coerce_container_to_any = "warn"
# cognitive_complexity = "warn" # Never.
collection_is_never_read = "warn"
# create_dir = "warn" # Never.
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
decimal_literal_representation = "warn"
# default_numeric_fallback = "warn" # Never.
default_union_representation = "warn"
deref_by_slicing = "warn"
derive_partial_eq_without_eq = "warn"
disallowed_script_idents = "warn"
doc_include_without_cfg = "warn"
doc_link_code = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
equatable_if_let = "warn"
error_impl_error = "warn"
# exhaustive_enums = "warn" # Maybe someday.
# exhaustive_structs = "warn" # Maybe someday.
exit = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_arithmetic = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
future_not_send = "warn"
get_unwrap = "warn"
host_endian_bytes = "warn"
if_then_some_else_none = "warn"
# impl_trait_in_params = "warn" # Don't care.
# implicit_return = "warn" # Never.
imprecise_flops = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
integer_division = "warn" # Probably never.
integer_division_remainder_used = "warn" # Never.
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
# iter_over_hash_type = "warn" # Never.
iter_with_drain = "warn"
large_include_file = "warn"
large_stack_frames = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
literal_string_with_formatting_args = "warn"
little_endian_bytes = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
# min_ident_chars = "warn" # Maybe someday.
# missing_assert_message = "warn" # Probably never.
missing_asserts_for_indexing = "warn"
missing_const_for_fn = "warn"
# missing_docs_in_private_items = "warn" # Maybe someday.
# missing_inline_in_public_items = "warn" # Maybe someday.
missing_trait_methods = "warn" # Probably never.
mixed_read_write_in_expression = "warn"
# mod_module_files = "warn" # Never. Mutually exclusive with self_named_module_files.
# module_name_repetitions = "warn" # Maybe someday. These are everywhere.
modulo_arithmetic = "warn"
# multiple_inherent_impl = "warn" # Don't care.
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
non_send_fields_in_send_ty = "warn"
non_zero_suggestions = "warn"
nonstandard_macro_braces = "warn"
# option_if_let_else = "warn" # Never.
or_fun_call = "warn"
panic = "warn"
panic_in_result_fn = "warn"
# partial_pub_fields = "warn" # Never.
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
# pattern_type_mismatch = "warn" # Never. The ergonomics are terrible.
pointer_format = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
# pub_use = "warn" # Never.
# pub_with_shorthand = "warn" # Never.
pub_without_shorthand = "warn"
# question_mark_used = "warn" # Never.
rc_buffer = "warn"
rc_mutex = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
# redundant_pub_crate = "warn" # Never. This is mutually exclusive with unreachable_pub.
# redundant_test_prefix = "warn" # Maybe someday.
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
# semicolon_outside_block = "warn" # Never.
separated_literal_suffix = "warn"
set_contains_or_insert = "warn"
# shadow_reuse = "warn" # Never.
# shadow_same = "warn" # Never.
# shadow_unrelated = "warn" # Never.
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "warn"
# single_call_fn = "warn" # Maybe someday.
# single_char_lifetime_names = "warn" # Maybe someday.
single_option_map = "warn"
# std_instead_of_alloc = "warn" # Maybe someday.
# std_instead_of_core = "warn" # Maybe someday.
# str_to_string = "warn" # Maybe someday.
string_add = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
too_long_first_doc_paragraph = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
try_err = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
uninhabited_references = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
# unneeded_field_pattern = "warn" # Never. Exhaustive is good.
unreachable = "warn"
# unseparated_literal_suffix = "warn" # Never. Mutually exclusive with separated_literal_suffix.
unused_peekable = "warn"
unused_result_ok = "warn"
unused_rounding = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
verbose_file_reads = "warn"
volatile_composites = "warn"
while_float = "warn"
wildcard_enum_match_arm = "warn"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deprecated_safe_2024 = "warn"
deref_into_dyn_supertrait = "warn"
edition_2024_expr_fragment_specifier = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
keyword_idents = "warn"
keyword_idents_2018 = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
linker_messages = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
single_use_lifetimes = "warn"
tail_expr_drop_order = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
# unused_results = "warn" # We should make this warn.
variant_size_differences = "warn"
