[package]
name = "spiffe-rustls-grpc-examples"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
publish = false

[dependencies]
spiffe = "0.9"
spiffe-rustls = { path = "../spiffe-rustls", features = ["ring"] }

# gRPC stack
tonic = { version = "0.14", features = ["transport"] }
tonic-rustls = "0.3.0"
tonic-prost = "0.14"
prost = "0.14"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
env_logger = "0.11.8"

[build-dependencies]
tonic-prost-build = "0.14"
