[package]
name = "spiffe-rustls-grpc-examples"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
spiffe = { version = "0.11", features = ["x509-source"]}
spiffe-rustls = { path = "../spiffe-rustls", features = ["ring"] }

# gRPC stack
tonic = { version = "0.14", features = ["transport"] }
tonic-rustls = "0.3.0"
tonic-prost = "0.14"
prost = "0.14"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
env_logger = "0.11.8"

[build-dependencies]
tonic-prost-build = "0.14"
