[package]
name = "spiffe-rustls-tokio"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/spiffe-rustls-tokio"
readme = "README.md"
description = "Tokio-native async accept/connect helpers for spiffe-rustls"
categories = ["authentication", "network-programming"]
keywords = ["spiffe", "spire", "rustls", "tokio", "mtls"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
spiffe = { version = "0.11", features = ["x509-source"] }
tokio = { version = "1", default-features = false, features = ["net", "rt"] }
tokio-rustls = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std"] }
thiserror = "2"

[dev-dependencies]
anyhow = "1"
env_logger = "0.11"
spiffe-rustls = { version = "0.4" }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "signal",
    "macros",
    "io-util",
] }

[[example]]
name = "mtls_tcp_server"
path = "examples/mtls_tcp_server.rs"

[[example]]
name = "mtls_tcp_client"
path = "examples/mtls_tcp_client.rs"
