[package]
name = "spiffe-rustls"
version = "0.1.2"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
description = "SPIFFE/SPIRE integration for rustls"
repository = "https://github.com/maxlambrecht/rust-spiffe"
readme = "README.md"
keywords = ["spiffe", "spire", "rustls", "mtls", "tls"]
categories = ["network-programming", "cryptography", "authentication"]

[features]
default = ["ring"]

# Crypto backend selection (rustls feature passthrough)
ring = ["rustls/ring"]
aws-lc-rs = ["rustls/aws_lc_rs"]

tcp-examples = ["dep:tokio-rustls"]

# Internal: enables deps used by integration tests
integration-tests = ["dep:tokio-rustls"]

[dependencies]
spiffe = "0.7.4"
rustls = { version = "0.23", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync"] }
tokio-util = "0.7"
log = "0.4"
thiserror = "2"
x509-parser = "0.18"

# Optional: TCP/TLS example support
tokio-rustls = { version = "0.26", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1"
env_logger = "0.11"

# Tokio for tests/examples
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
    "io-util",
    "sync",
] }

[[example]]
name = "mtls_tcp_server"
path = "examples/mtls_tcp_server.rs"
required-features = ["tcp-examples"]

[[example]]
name = "mtls_tcp_client"
path = "examples/mtls_tcp_client.rs"
required-features = ["tcp-examples"]
