[package]
name = "spiffe-rustls"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "SPIFFE/SPIRE integration for rustls"
readme = "README.md"
repository = "https://github.com/maxlambrecht/rust-spiffe"
keywords = ["spiffe", "spire", "rustls", "mtls", "tls"]
categories = ["network-programming", "cryptography", "authentication"]

[dependencies]
spiffe = "0.9"
rustls = { version = "0.23", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync"] }
tokio-util = "0.7"
thiserror = "2"
x509-parser = "0.18"

# Observability (optional)
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

# Optional: TCP/TLS example + integration support
tokio-rustls = { version = "0.26", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1"
env_logger = "0.11"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
    "io-util",
    "sync",
] }

[features]
default = ["ring"]

# Crypto backend selection (rustls feature passthrough)
ring = ["rustls/ring"]
aws-lc-rs = ["rustls/aws_lc_rs"]

# Observability
logging = ["dep:log", "spiffe/logging"]
tracing = ["dep:tracing", "spiffe/tracing"]

# Examples / tests
tcp-examples = ["dep:tokio-rustls"]
integration-tests = ["dep:tokio-rustls"]

[[example]]
name = "mtls_tcp_server"
path = "examples/mtls_tcp_server.rs"
required-features = ["tcp-examples"]

[[example]]
name = "mtls_tcp_client"
path = "examples/mtls_tcp_client.rs"
required-features = ["tcp-examples"]
