[package]
name = "spiffe-rustls"
version = "0.4.6"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/spiffe-rustls"
readme = "README.md"
description = "SPIFFE-based mutual TLS integration for rustls"
categories = ["authentication", "network-programming"]
keywords = ["spiffe", "spire", "rustls", "mtls", "tls"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
spiffe = { version = "0.11", features = ["x509-source"] }
rustls = { version = "0.23", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt", "sync"] }
tokio-util = "0.7"
thiserror = "2"
x509-parser = "0.18"
oid-registry = "0.8.1"
parking_lot = { version = "0.12", optional = true }

# Observability (optional)
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
anyhow = "1"
env_logger = "0.11"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "signal",
] }
tokio-rustls = { version = "0.26", default-features = false }

[features]
default = ["ring"]

# Crypto backend selection (rustls feature passthrough)
ring = ["rustls/ring"]
aws-lc-rs = ["rustls/aws_lc_rs"]

# Use parking_lot for internal synchronization
parking-lot = ["dep:parking_lot"]

# Observability
logging = ["dep:log", "spiffe/logging"]
tracing = ["dep:tracing", "spiffe/tracing"]

[[example]]
name = "mtls_tcp_server"
path = "examples/mtls_tcp_server.rs"

[[example]]
name = "mtls_tcp_client"
path = "examples/mtls_tcp_client.rs"
