[package]
name = "spiffe"
version = "0.10.1"
edition = "2021"
rust-version = "1.85"
authors = ["Max Lambrecht <maxlambrecht@gmail.com>"]
license = "Apache-2.0"
description = "Rust client library implementation for SPIFFE"
repository = "https://github.com/maxlambrecht/rust-spiffe"
documentation = "https://docs.rs/spiffe"
readme = "README.md"
categories = ["cryptography"]
keywords = ["spiffe", "x509", "jwt"]

[dependencies]
thiserror = "2"

zeroize = { version = "1", features = ["zeroize_derive"], optional = true }

# X.509 parsing (optional)
asn1 = { package = "simple_asn1", version = "0.6", optional = true }
x509-parser = { version = "0.18", optional = true }
pkcs8 = { version = "0.10", optional = true }

# JWT data model and parsing (optional)
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
time = { version = "0.3", optional = true }
base64ct = { version = "1.8", features = ["alloc"], optional = true }

# Optional JWT verification backend
jsonwebtoken = { version = "10", optional = true, default-features = false }

# Workload API (async + runtime helpers)
tokio = { version = "1", default-features = false, features = ["rt", "net", "time", "sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }
arc-swap = { version = "1", optional = true }
fastrand = { version = "2", optional = true }

# Observability (optional)
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

# gRPC/Protobuf transport
url = { version = "2", optional = true }
tonic = { version = "0.14", optional = true, default-features = false, features = ["transport", "codegen"] }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
hyper-util = { version = "0.1", optional = true, features = ["tokio"] }

[dev-dependencies]
# Test crypto helpers
p256 = { version = "0.13", features = ["pkcs8"] }

# Test/util
base64ct = "1"
serde_json = "1"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

# Used in tests to validate DER bytes are parseable as OpenSSL X.509 certificates.
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = []

# Endpoint parsing/normalization only (no async/runtime deps).
transport = ["dep:url"]

# gRPC transport connector + transport errors.
transport-grpc = ["transport", "dep:tokio", "dep:tonic", "dep:tower", "dep:hyper-util"]

# X.509 types + parsing (adds ASN.1/X.509 deps).
x509 = ["dep:asn1", "dep:x509-parser", "dep:pkcs8", "dep:zeroize"]

# Workload API core substrate: transport, runtime, and protobuf dependencies.
# This feature provides the infrastructure for the Workload API client without
# X.509 or JWT parsing capabilities.
workload-api-core = [
    "transport-grpc",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-util",
    "dep:arc-swap",
    "dep:fastrand",
    "dep:tonic-prost",
    "dep:prost",
    "dep:prost-types",
]

# Workload API with X.509 capability.
workload-api-x509 = ["workload-api-core", "x509"]

# Workload API with JWT capability.
workload-api-jwt = ["workload-api-core", "jwt"]

# Workload API with both X.509 and JWT capabilities (full bundle).
workload-api-full = ["workload-api-x509", "workload-api-jwt"]

# Async Workload API client (backward compatibility alias for `workload-api-full`).
# This feature enables the full Workload API client with both X.509 and JWT support.
workload-api = ["workload-api-full"]

# High-level X.509 watcher/caching API built on the Workload API.
x509-source = ["workload-api"]

# JWT types + token parsing (no signature verification).
jwt = ["dep:serde", "dep:serde_json", "dep:time", "dep:base64ct", "dep:zeroize"]

# JWT signature verification via `jsonwebtoken` (select exactly one backend).
jwt-verify-rust-crypto = ["jwt", "dep:jsonwebtoken", "jsonwebtoken/rust_crypto"]
jwt-verify-aws-lc-rs = ["jwt", "dep:jsonwebtoken", "jsonwebtoken/aws_lc_rs"]

# Observability backends (optional).
logging = ["dep:log"]
tracing = ["dep:tracing", "logging"]

[package.metadata.docs.rs]
features = ["x509-source", "jwt", "jwt-verify-rust-crypto"]
