[package]
name = "spire-api"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
authors = ["Max Lambrecht <maxlambrecht@gmail.com>"]
description = "Rust library for the SPIRE APIs"
license = "Apache-2.0"
repository = "https://github.com/maxlambrecht/rust-spiffe"
documentation = "https://docs.rs/spire-api"
readme = "README.md"
categories = ["cryptography"]
keywords = ["SPIFFE", "SPIRE"]

[dependencies]
spiffe = { version = "0.10", features = ["x509", "jwt", "transport-grpc"] }
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen"] }
prost = { version = "0.14" }
tonic-prost = "0.14"
tokio = { "version" = "1", features = ["net"] }
tokio-stream = "0.1"
thiserror = "2"

[dev-dependencies]
once_cell = "1"
