[package]
name = "spire-api"
version = "0.5.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/spire-api"
readme = "README.md"
description = "Rust gRPC client for the SPIRE APIs"
categories = ["authentication", "network-programming"]
keywords = ["spiffe", "spire", "identity", "authentication", "grpc"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
spiffe = { version = "0.10", features = ["x509", "jwt", "transport-grpc"] }
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen"] }
prost = { version = "0.14" }
tonic-prost = "0.14"
tokio = { version = "1", features = ["net"] }
tokio-stream = "0.1"
thiserror = "2"

[dev-dependencies]
once_cell = "1"
