[package]
name = "spire-api"
version = "0.5.3"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/spire-api"
readme = "README.md"
description = "Rust gRPC client for the SPIRE APIs"
categories = ["authentication", "network-programming"]
keywords = ["spiffe", "spire", "identity", "authentication", "grpc"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
futures = { version = "0.3", default-features = false }
prost = { version = "0.14", default-features = false }
spiffe = { version = "0.11", features = ["x509", "jwt", "transport-grpc"] }
thiserror = { version = "2", default-features = false }
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen"] }
tonic-prost = { version = "0.14", default-features = false }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["time"] }
