[package]
name = "spiffe-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
libfuzzer-sys = "0.4"
spiffe = { path = "..", features = ["x509", "jwt"] }

[[bin]]
name = "fuzz_spiffe_id_parse"
path = "fuzz_targets/fuzz_spiffe_id_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trust_domain_parse"
path = "fuzz_targets/fuzz_trust_domain_parse.rs"
test = false
doc = false
